doesnt work but kys

--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "feurbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules index.ts"
+    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/rest": "^1.7.1",
     "better-sqlite3": "^8.3.0",
+    "discord.js": "^13.16.0",
     "dotenv": "^16.0.3",
     "mineflayer": "^4.8.1",
+    "superagent": "^8.0.9",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/superagent": "^4.1.18"
   }
 }
